--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,4 +1,15 @@
 <h1>Register a new TomeTake account</h1>
 
 <label>Username: </label>
+<br>
 <input type="text" id="username" [(ngModel)]="username">
+<br>
+<label>Email:</label>
+<br>
+<input type="text" id="email" [(ngModel)]="email">
+<br>
+<label>Password:</label>
+<br>
+<input type="text" id="password" [(ngModel)]="password">
+<br>
+<button (click)="registerUser()" *ngIf="username != '' && email != '' && password != ''">Submit!</button>
