completed login functionality

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,2 +1,11 @@
 <h1>Login to your TomeTake Account</h1>
-
+<br>
+<label>Username: </label>
+<br>
+<input type="text" id="username" [(ngModel)]="username">
+<br>
+<label>Password: </label>
+<br>
+<input type="text" id="password" [(ngModel)]="password">
+<br>
+<button (click)="submitLogin()">Log in</button>
