created current user service functionality

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
-<h1>Welcome</h1>
+<h1>Welcome {{currentUserService.getUsername()}}!</h1>
+<br>
+<h1>Your Email: {{currentUserService.getEmail()}}</h1>
 <br>
 <p>Link</p>
 <br>
