finished adding book functionality and changed erd

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -2,6 +2,10 @@
 <br>
 <h1>Your Email: {{currentUserService.getEmail()}}</h1>
 <br>
-<p>Link</p>
+<nav>
+<a routerLink="browsebook">Browse Books</a>
 <br>
-<p>Link</p>
+<a routerLink="bookform">Add Book</a>
+</nav>
+<router-outlet></router-outlet>
+
