completed book browsing functionality and fixed routes

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -3,9 +3,9 @@
 <h1>Your Email: {{currentUserService.getEmail()}}</h1>
 <br>
 <nav>
-<a routerLink="browsebook">Browse Books</a>
+<a routerLink="/browsebook">Browse Books</a>
 <br>
-<a routerLink="bookform">Add Book</a>
+<a routerLink="/bookform">Add Book</a>
 </nav>
 <router-outlet></router-outlet>
 
