--- a/client/src/app/browsebook/browsebook.component.html
+++ b/client/src/app/browsebook/browsebook.component.html
@@ -1,4 +1,4 @@
-<h1>Browse our amazin books</h1>
+<h1>Browse our amazing books</h1>
 <br>
 <label>Search: </label>
 <input type="text" id="browseGenre" [(ngModel)]="browseGenre">
@@ -9,12 +9,18 @@
 <div *ngIf="hasBeenClicked">
 
     <div *ngFor="let book of bookList">
-    <h3>Title: {{book.title}}</h3>
-    <p>Author: {{book.author}}</p>
-    <p>Genre: {{book.genre}}</p>
+    <h3 (click)="showBookView(book)" class="clickable">Title: {{book.title}}</h3>
+    <p>by {{book.author}}</p>
+    <br>
+    <!-- <p>Genre: {{book.genre}}</p>
     <p>Description: {{book.description}}</p>
     <p>Publication Year: {{book.publicationYear}}</p>
     <p>Quantity: {{book.quantity}}</p>
-    <p>Page Count: {{book.numberOfPages}}</p>
+    <p>Page Count: {{book.numberOfPages}}</p> -->
     </div>
 </div>
+
+<br>
+<br>
+
+<a routerLink="/dashboard">Return to Dashboard</a>
