created checkout functionality

--- a/client/src/app/bookview/bookview.component.html
+++ b/client/src/app/bookview/bookview.component.html
@@ -5,6 +5,8 @@
 <p>Publication Year: {{book.publicationYear}}</p>
 <p>Quantity: {{book.quantity}}</p>
 <p>Pages: {{book.numberOfPages}}</p>
+<br>
+<button (click)="checkoutBook()">Checkout Book</button>
 
 <br>
 <br>
