--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -6,6 +6,8 @@
 <a routerLink="/browsebook">Browse Books</a>
 <br>
 <a routerLink="/bookform">Add Book</a>
+<br>
+<a routerLink="/checkedoutbooks">See checked out books</a>
 </nav>
 <router-outlet></router-outlet>
 
