--- a/client/src/app/checkedoutbooks/checkedoutbooks.component.html
+++ b/client/src/app/checkedoutbooks/checkedoutbooks.component.html
@@ -1,18 +1,60 @@
 <h1>Here are your checked out books</h1>
 <br>
 
+<label>Sort by: </label>
+
+<select id="sortBy" [(ngModel)]="sortBy" (change)="hideAndReveal()">
+    <option value="default"></option>
+    <option value="title">Title</option>
+    <option value="publicationYear">Publication Year</option>
+</select>
+
+<br>
+
 <div *ngIf="books.length > 0; else elseBlock">
-    <div *ngFor="let book of books">
-        <p>{{book.title}}</p>
-        <p>by {{book.author}}</p>
-        <p>Genre: {{book.genre}}</p>
-        <p>Description: {{book.description}}</p>
-        <p>Publication Year: {{book.publicationYear}}</p>
-        <p>Quantity: {{book.quantity}}</p>
-        <p>Pages: {{book.numberOfPages}}</p>
-        <br>
-    </div>
+
+    <ng-container *ngIf="sortByCurrent === 'default'">
+        <div *ngFor="let book of books">
+            <p>{{book.title}}</p>
+            <p>by {{book.author}}</p>
+            <p>Genre: {{book.genre}}</p>
+            <p>Description: {{book.description}}</p>
+            <p>Publication Year: {{book.publicationYear}}</p>
+            <p>Quantity: {{book.quantity}}</p>
+            <p>Pages: {{book.numberOfPages}}</p>
+            <br>
+        </div>
+    </ng-container>
+
+    <ng-container *ngIf="sortByCurrent === 'title'">
+        <div *ngFor="let book of booksByTitle">
+            <p>{{book.title}}</p>
+            <p>by {{book.author}}</p>
+            <p>Genre: {{book.genre}}</p>
+            <p>Description: {{book.description}}</p>
+            <p>Publication Year: {{book.publicationYear}}</p>
+            <p>Quantity: {{book.quantity}}</p>
+            <p>Pages: {{book.numberOfPages}}</p>
+            <br>
+        </div>
+    </ng-container>
+
+    <ng-container *ngIf="sortByCurrent === 'publicationYear'">
+        <div *ngFor="let book of booksByPublicationYear">
+            <p>{{book.title}}</p>
+            <p>by {{book.author}}</p>
+            <p>Genre: {{book.genre}}</p>
+            <p>Description: {{book.description}}</p>
+            <p>Publication Year: {{book.publicationYear}}</p>
+            <p>Quantity: {{book.quantity}}</p>
+            <p>Pages: {{book.numberOfPages}}</p>
+            <br>
+        </div>
+    </ng-container>
 </div>
 <ng-template #elseBlock>
     <h3>You have not checked out any books!</h3>
 </ng-template>
+<br>
+<br>
+<a routerLink="/dashboard">Return to Dashboard</a>
