created book image upload functionality

--- a/client/src/app/browsebook/browsebook.component.html
+++ b/client/src/app/browsebook/browsebook.component.html
@@ -1,7 +1,7 @@
 <h1>Browse our amazing books</h1>
 <br>
 <label>Search: </label>
-<input type="text" id="browseGenre" [(ngModel)]="browseGenre">
+<input type="text" id="browseGenre" [(ngModel)]="browseGenre" placeholder="Search TomeTake">
 <button (click)="retrieveBooks()">Browse</button>
 <br>
 <br>
