--- a/client/src/app/bookform/bookform.component.html
+++ b/client/src/app/bookform/bookform.component.html
@@ -28,4 +28,9 @@
 <br>
 <input type="number" id="numberOfPages" [(ngModel)]="numberOfPages">
 <br>
+<label>Image: </label>
+<br>
+<input type="file" (change)="onFileSelected($event)">
+<br>
+<br>
 <button (click)="addBook()">Add Book</button>
