--- a/client/src/app/bookview/bookview.component.html
+++ b/client/src/app/bookview/bookview.component.html
@@ -1,4 +1,5 @@
 <h3>{{book.title}}</h3>
+<img [src]="this.remote.getImageSrc(book.imageType) + book.image" alt="{{book.title}}" height="300" width="200">
 <p>by {{book.author}}</p>
 <p>Genre: {{book.genre}}</p>
 <p>Description: {{book.description}}</p>
