--- a/client/src/app/browsebook/browsebook.component.html
+++ b/client/src/app/browsebook/browsebook.component.html
@@ -9,14 +9,10 @@
 <div *ngIf="hasBeenClicked">
 
     <div *ngFor="let book of bookList">
+    <img [src]="this.remote.getImageSrc(book.imageType) + book.image" alt="{{book.title}}" height="300" width="200">
     <h3 (click)="showBookView(book)" class="clickable">Title: {{book.title}}</h3>
     <p>by {{book.author}}</p>
     <br>
-    <!-- <p>Genre: {{book.genre}}</p>
-    <p>Description: {{book.description}}</p>
-    <p>Publication Year: {{book.publicationYear}}</p>
-    <p>Quantity: {{book.quantity}}</p>
-    <p>Page Count: {{book.numberOfPages}}</p> -->
     </div>
 </div>
 
