--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -8,6 +8,8 @@
 <a routerLink="/bookform">Add Book</a>
 <br>
 <a routerLink="/checkedoutbooks">See checked out books</a>
+<br>
+<a routerLink="/login" (click)="this.currentUserService.clearCurrentUser()">Log out</a>
 </nav>
 <router-outlet></router-outlet>
 
