--- a/client/src/app/bookform/bookform.component.html
+++ b/client/src/app/bookform/bookform.component.html
@@ -10,7 +10,18 @@
 <br>
 <label>Genre: </label>
 <br>
-<input type="text" id="genre" [(ngModel)]="genre">
+<select [(ngModel)]="genre">
+    <option value="Adventure"></option>
+    <option value="Autobiography">Autobiography</option>
+    <option value="Biography">Biography</option>
+    <option value="Children's Literature">Children's Literature</option>
+    <option value="Classic Literature">Classic Literature</option>
+    <option value="Fantasy">Fantasy</option>
+    <option value="Horror">Horror</option>
+    <option value="Mystery">Mystery</option>
+    <option value="Non-Fiction">Non-Fiction</option>
+    <option value="Romance">Romance</option>
+</select>
 <br>
 <label>Description: </label>
 <br>
