implemented route guards and added more links

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -6,6 +6,10 @@
 <br>
 <label>Password: </label>
 <br>
-<input type="text" id="password" [(ngModel)]="password">
+<input type="password" id="password" [(ngModel)]="password">
 <br>
 <button (click)="submitLogin()">Log in</button>
+<br>
+<br>
+<p>New to TomeTake?</p>
+<a routerLink="/register">Create an account</a>
