--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -6,7 +6,7 @@
 <br>
 <label>Email:</label>
 <br>
-<input type="text" id="email" [(ngModel)]="email">
+<input type="email" id="email" [(ngModel)]="email">
 <br>
 <label>Password:</label>
 <br>
