--- a/client/src/app/browsebook/browsebook.component.html
+++ b/client/src/app/browsebook/browsebook.component.html
@@ -2,7 +2,8 @@
 <br>
 <label>Genre: </label>
 <select [(ngModel)]="genre">
-    <option value="Adventure"></option>
+    <option value="" selected>All</option>
+    <option value="Adventure">Adventure</option>
     <option value="Autobiography">Autobiography</option>
     <option value="Biography">Biography</option>
     <option value="Children's Literature">Children's Literature</option>
