--- a/client/src/app/checkedoutbooks/checkedoutbooks.component.html
+++ b/client/src/app/checkedoutbooks/checkedoutbooks.component.html
@@ -15,14 +15,14 @@
 
     <ng-container *ngIf="sortByCurrent === 'default'">
         <div *ngFor="let book of books">
-            <p>{{book.title}}</p>
+            <p (click)="showBookView(book)" class="clickable">{{book.title}}</p>
             <p>by {{book.author}}</p>
             <p>Genre: {{book.genre}}</p>
             <p>Description: {{book.description}}</p>
             <p>Publication Year: {{book.publicationYear}}</p>
             <p>Quantity: {{book.quantity}}</p>
             <p>Pages: {{book.numberOfPages}}</p>
-            <img [src]="this.remote.getImageSrc(book.imageType) + book.image" alt="{{book.title}}" height="300" width="200">
+            <img [src]="this.remote.getImageSrc(book.imageType) + book.image" alt="{{book.title}}" (click)="showBookView(book)" class="clickable" height="300" width="200">
             <br>
         </div>
     </ng-container>
